Deleted Error Object from SvLayer, using the Performance functions directly
Signed-off-by: Ismail Marmoush <marmoushismail@gmail.com>

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,5 +1,7 @@
 JANN-0.4:
 --------
+Part 1
+---------
 Linear regression One/Multiple Variables
 Linear regression Training:
 	Batch GD (single neuron)
@@ -11,6 +13,44 @@ Dynamic Training through com.marmoush.jann.train.Train Class
 Better Tests
 *** Backpropagation will be deleted and replaced with better more clear algorithms  
 
+
+Part 2
+--------
+
+Models:
+1- Logistic Regression One Class
+2- Logistic Regression Multiple Classes
+
+Training:
+Logistic Regression GD
+Regularized Linear Regression
+Regularized Logistic Regression
+
+
+Utils:
+Random Initialization of theta
+
+Part 3
+-------
+Models:
+1- Logistic Regression Neural Network
+2- Linear Regression Neural Network
+
+Gradient Checking
+Numerical Estimation of gradients
+Neural Network Back propagation
+
+Part 4
+--------
+Notes or Logic  for Decision Making For handling errors :
+1-Identify Problems with the help of  (Graphs, tools)
+2-Act upon on it   (Manual ways, Automatic ways)
+
+
+Part 5
+--------
+More Tests
+More Graphs
  
 JANN-0.3
 --------
